# health-coordinator

./: .gitignore  HEALTH-COORDINATOR.md  pyproject.toml
agent-registry/: README.md  code-quality.contract.json  docs-auditor.contract.json
app/: README.md  __init__.py  cli.py  config.py  database.py  logger.py  logging_context.py  main.py  models.py
app/api/: README.md  __init__.py  routes_approval.py  routes_runs.py  routes_tasks.py
app/core/: README.md  __init__.py  state_machine.py
app/orchestrator/: README.md  __init__.py  qwen_subprocess.py  registry.py  stream_parser.py
schemas/: README.md  approval-state.schema.json  subagent-audit-output.schema.json  subagent-fix-output.schema.json  task-record.schema.json
tests/: README.md  __init__.py  test_api_routes.py  test_basic.py  test_database.py  test_models.py  test_qwen_subprocess.py  test_registry.py  test_state_machine.py  test_stream_parser.py
